--- a/index.html
+++ b/index.html
@@ -8,6 +8,20 @@
     <title>PaintJs</title>
 </head>
 <body>
+    <canvas id="jsCanvas" class="canvas"></canvas>
+    <div class="controls">
+        <div class="controls_colors" id="jsColors">
+            <div class="controls_color" style="background-color:black"></div>
+            <div class="controls_color" style="background-color:white"></div>
+            <div class="controls_color" style="background-color:red"></div>
+            <div class="controls_color" style="background-color:orange"></div>
+            <div class="controls_color" style="background-color:yellow"></div>
+            <div class="controls_color" style="background-color:green"></div>
+            <div class="controls_color" style="background-color:skyblue"></div>
+            <div class="controls_color" style="background-color:blue"></div>
+            <div class="controls_color" style="background-color:purple"></div>
+        </div>
+    </div>
     <script src="app.js"></script>
 </body>
 </html>
